tests/paczka1/small_fuzzy/89547449.err
Error in line 11: S773 A643 72,5
Error in line 14: S773 S773 18,5
